chorre: getStaticprops,getStaticPaths are added

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,24 @@ body {
   box-sizing: border-box;
 }
 
+.glass {
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(16px);
+  -webkit-backdrop-filter: blur(16px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.glass:hover {
+  background: rgba(255, 255, 255, 0.45);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(16px);
+  -webkit-backdrop-filter: blur(16px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
 :root {
   --text-purple: rgba(67, 56, 202, 1);
   --test-purple-dark: rgb(26, 22, 118);
