--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -21,6 +21,17 @@
   z-index: 1;
 }
 
+.cardLayout {
+  display: grid;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  column-gap: 1.5rem;
+  row-gap: 1.5rem;
+}
+
+.card {
+  justify-content: center;
+}
+
 /** Breakpoints:
   sm: min-width: 640px;
   md: min-width: 768px;
@@ -40,6 +51,12 @@
     padding-left: 1.5rem /* 24px */;
     padding-right: 1.5rem /* 24px */;
   }
+  .cardLayout {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    column-gap: 1.5rem;
+    row-gap: 1.5rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -55,6 +72,12 @@
   .heroImage {
     right: 20%;
   }
+  .cardLayout {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    column-gap: 1.5rem;
+    row-gap: 1.5rem;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -69,5 +92,11 @@
   }
   .heroImage {
     right: 20%;
+  }
+  .cardLayout {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    column-gap: 1.5rem;
+    row-gap: 1.5rem;
   }
 }
